Opened 15 years ago
Closed 15 years ago
#5063 closed bug (fixed)
iprowifi4965 panics with "unsupported size" because construct_ext_sized_mbuf doesn't handle PAGE_SIZE size
Reported by: | tqh | Owned by: | colin |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Drivers/Network | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
I've been testing the iprowifi4965 after talking to Colin.
It currently kdls on boot in:
construct_ext_sized_mbuf(..) in src/libs/compat/freebsd_network/mbuf.c from
m_getjcl(..) in src/libs/compat/freebsd_network/mbuf.c from
iwn_alloc_rx_ring(..) in src/add-ons/kernel/drivers/network/wlan/iprowifi4965/dev/iwn/if_iwn.c
http://haiku.it.su.se:8180/source/xref/src/libs/compat/freebsd_network/mbuf.c#71 http://haiku.it.su.se:8180/source/xref/src/add-ons/kernel/drivers/network/wlan/iprowifi4965/dev/iwn/if_iwn.c#761
The size is MJUMPAGESIZE which is
#define MJUMPAGESIZE PAGE_SIZE
which fails
if (size != MCLBYTES && size != MJUM9BYTES) panic("unsupported size");
Note:
See TracTickets
for help on using tickets.
Fixed in hrev34429