* Adding another mbuf cache for handling MJUMPAGESIZE sized clusters. * This should fix ticket #5063.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34429 a95241bf-73f2-0310-859d-f6bbb57e9c96